@@ -1,3 +1,8 @@
+Tue May 18 21:12:09 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)
+
+	* config/{mips,nind,udi,unix,vx}-gdb.exp: Look for "Quit anyway.*?"
+	not just "Quit anyway?".
+
 Tue May 18 17:13:20 1993  Fred Fish  (fnf@cygnus.com)
 
 	* gdb.t21/demangle.exp:  Add a couple of new patterns.  Ensure
